featura/dados continuos da simulacao